--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.4",
         "spatie/laravel-permission": "^5.5"
@@ -23,6 +25,9 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/BookShopHelper.php"
+        ], 
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
