--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "bootstrap": "^5.2.2",
         "font-awesome": "^4.7.0",
-        "jquery": "^3.6.1"
+        "jquery": "^3.6.1",
+        "sweetalert2": "^11.6.5"
     }
 }
