--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.4",
+        "masbug/flysystem-google-drive-ext": "*",
         "nao-pon/flysystem-google-drive": "~1.1",
         "spatie/laravel-permission": "^5.5"
     },
