--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.4",
+        "maatwebsite/excel": "^3.1",
         "masbug/flysystem-google-drive-ext": "*",
         "nao-pon/flysystem-google-drive": "~1.1",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "symfony/process": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
