--- a/.env.dev
+++ b/.env.dev
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql_host
 DB_PORT=3306
-DB_DATABASE=bookshop
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=shop_laravel
+DB_USERNAME=book_user
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
